<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/ic_directions_bike"
            android:title="@string/nav_workouts" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_plans" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_flag"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_trending_up"
            android:title="@string/nav_analysis" />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
