<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_account_circle_none"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_notifications"
        android:title="@string/action_about"
        android:icon="@drawable/ic_notifications_none"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_exit_to_app"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
