<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.somet.somet.WorkoutActivity$OpenedWorkoutGraphsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:background="@color/white"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/graph_elevation_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_big" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartElevation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:background="@color/white"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/graph_cadence_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_big" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartCadence"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:background="@color/white"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/graph_speed_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_big" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:background="@color/white"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/graph_heart_rate_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_big" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartHeartRate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:background="@color/white"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/graph_power_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_big" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartPower"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
